docs/tests/parser/expressions/invalid/ExprCastInvalidType.b
fn void test() {
    let int x = 5 as 42;
}
